samples/_failures_safe/1761463420_f1f252_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2851c9d1.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_2851c9d1.c:164:9: error: expected declaration or statement at end of input
  164 |         case TOKEN_EOF:
      |         ^~~~
./samples/SAFE/__tmp_2851c9d1.c:164:9: error: expected declaration or statement at end of input
